--- a/n/ns/nsf/nsfwftw.com.html
+++ b/n/ns/nsf/nsfwftw.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nsfwftw.com privacy policy that was archived on 2010-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100603025906id_/http%3A//www.nsfwftw.com/static/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nsfwftw.com privacy policy that was archived on 2010-08-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100828145512id_/http%3A//www.nsfwftw.com/static/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <title>Porn Videos, Brianna Frost Videos, Cam Slut Videos, Sex Videos, Amateur Sex Videos, Cam Babes, Gisele Videos, Cam With Carmen Videos  - NSFWFTW.com updates daily with free porn videos</title>
@@ -95,48 +95,38 @@
                 Tags:
                 </div>
                 <div id="scroller_container" style="position: relative; overflow: hidden;">
-                    <div class="jscroller2_left" style="font-size: 13px; line-height: 15px; white-space: nowrap; margin: 0px; position: absolute; left: -4px; top: 0px; height: 15px;">
-                                            <a class="submenulink" href="/search?search_query=pinkish&amp;search_type=videos">pinkish</a>
-                                            <a class="submenulink" href="/search?search_query=pussy&amp;search_type=videos">pussy</a>
+                    <div class="jscroller2_left" style="font-size: 13px; line-height: 15px; white-space: nowrap; margin: 0px; position: absolute; left: -3px; top: 0px; height: 15px;">
                                             <a class="submenulink" href="/search?search_query=finger&amp;search_type=videos">finger</a>
-                                            <a class="submenulink" href="/search?search_query=masturbate&amp;search_type=videos">masturbate</a>
-                                            <a class="submenulink" href="/search?search_query=solo&amp;search_type=videos">solo</a>
-                                            <a class="submenulink" href="/search?search_query=camshow&amp;search_type=videos">camshow</a>
-                                            <a class="submenulink" href="/search?search_query=dildo&amp;search_type=videos">dildo</a>
-                                            <a class="submenulink" href="/search?search_query=petite&amp;search_type=videos">petite</a>
-                                            <a class="submenulink" href="/search?search_query=babe&amp;search_type=videos">babe</a>
-                                            <a class="submenulink" href="/search?search_query=office&amp;search_type=videos">office</a>
-                                            <a class="submenulink" href="/search?search_query=sexy&amp;search_type=videos">sexy</a>
-                                            <a class="submenulink" href="/search?search_query=busty&amp;search_type=videos">busty</a>
-                                            <a class="submenulink" href="/search?search_query=mature&amp;search_type=videos">mature</a>
-                                            <a class="submenulink" href="/search?search_query=orgasm&amp;search_type=videos">orgasm</a>
-                                            <a class="submenulink" href="/search?search_query=squirt&amp;search_type=videos">squirt</a>
-                                            <a class="submenulink" href="/search?search_query=jugs&amp;search_type=videos">jugs</a>
-                                            <a class="submenulink" href="/search?search_query=fingering&amp;search_type=videos">fingering</a>
-                                            <a class="submenulink" href="/search?search_query=masturbation&amp;search_type=videos">masturbation</a>
-                                            <a class="submenulink" href="/search?search_query=fuck&amp;search_type=videos">fuck</a>
-                                            <a class="submenulink" href="/search?search_query=webcam&amp;search_type=videos">webcam</a>
-                                            <a class="submenulink" href="/search?search_query=slut&amp;search_type=videos">slut</a>
-                                            <a class="submenulink" href="/search?search_query=tits&amp;search_type=videos">tits</a>
-                                            <a class="submenulink" href="/search?search_query=creampie&amp;search_type=videos">creampie</a>
-                                            <a class="submenulink" href="/search?search_query=snatch&amp;search_type=videos">snatch</a>
-                                            <a class="submenulink" href="/search?search_query=cunt&amp;search_type=videos">cunt</a>
-                                            <a class="submenulink" href="/search?search_query=Lesbian&amp;search_type=videos">Lesbian</a>
-                                            <a class="submenulink" href="/search?search_query=Asian&amp;search_type=videos">Asian</a>
-                                            <a class="submenulink" href="/search?search_query=Pussy&amp;search_type=videos">Pussy</a>
-                                            <a class="submenulink" href="/search?search_query=Tits&amp;search_type=videos">Tits</a>
-                                            <a class="submenulink" href="/search?search_query=Nude&amp;search_type=videos">Nude</a>
-                                            <a class="submenulink" href="/search?search_query=Licking&amp;search_type=videos">Licking</a>
-                                            <a class="submenulink" href="/search?search_query=Kissing&amp;search_type=videos">Kissing</a>
-                                            <a class="submenulink" href="/search?search_query=Dildo&amp;search_type=videos">Dildo</a>
-                                            <a class="submenulink" href="/search?search_query=Toys&amp;search_type=videos">Toys</a>
-                                            <a class="submenulink" href="/search?search_query=cherry&amp;search_type=videos">cherry</a>
-                                            <a class="submenulink" href="/search?search_query=blonde&amp;search_type=videos">blonde</a>
-                                            <a class="submenulink" href="/search?search_query=beautiful&amp;search_type=videos">beautiful</a>
-                                            <a class="submenulink" href="/search?search_query=babes&amp;search_type=videos">babes</a>
-                                            <a class="submenulink" href="/search?search_query=horny&amp;search_type=videos">horny</a>
-                                            <a class="submenulink" href="/search?search_query=toys&amp;search_type=videos">toys</a>
                                             <a class="submenulink" href="/search?search_query=fucking&amp;search_type=videos">fucking</a>
+                                            <a class="submenulink" href="/search?search_query=snatch&amp;search_type=videos">snatch</a>
+                                            <a class="submenulink" href="/search?search_query=babe&amp;search_type=videos">babe</a>
+                                            <a class="submenulink" href="/search?search_query=solo&amp;search_type=videos">solo</a>
+                                            <a class="submenulink" href="/search?search_query=cunt&amp;search_type=videos">cunt</a>
+                                            <a class="submenulink" href="/search?search_query=pussy&amp;search_type=videos">pussy</a>
+                                            <a class="submenulink" href="/search?search_query=sexy&amp;search_type=videos">sexy</a>
+                                            <a class="submenulink" href="/search?search_query=tits&amp;search_type=videos">tits</a>
+                                            <a class="submenulink" href="/search?search_query=masturbate&amp;search_type=videos">masturbate</a>
+                                            <a class="submenulink" href="/search?search_query=Solo&amp;search_type=videos">Solo</a>
+                                            <a class="submenulink" href="/search?search_query=camshow&amp;search_type=videos">camshow</a>
+                                            <a class="submenulink" href="/search?search_query=FINGER&amp;search_type=videos">FINGER</a>
+                                            <a class="submenulink" href="/search?search_query=BANG&amp;search_type=videos">BANG</a>
+                                            <a class="submenulink" href="/search?search_query=QUICKIE&amp;search_type=videos">QUICKIE</a>
+                                            <a class="submenulink" href="/search?search_query=BLONDE&amp;search_type=videos">BLONDE</a>
+                                            <a class="submenulink" href="/search?search_query=BATH&amp;search_type=videos">BATH</a>
+                                            <a class="submenulink" href="/search?search_query=SEXY&amp;search_type=videos">SEXY</a>
+                                            <a class="submenulink" href="/search?search_query=BABE&amp;search_type=videos">BABE</a>
+                                            <a class="submenulink" href="/search?search_query=TEEN&amp;search_type=videos">TEEN</a>
+                                            <a class="submenulink" href="/search?search_query=anal&amp;search_type=videos">anal</a>
+                                            <a class="submenulink" href="/search?search_query=blond&amp;search_type=videos">blond</a>
+                                            <a class="submenulink" href="/search?search_query=webcam&amp;search_type=videos">webcam</a>
+                                            <a class="submenulink" href="/search?search_query=fingering&amp;search_type=videos">fingering</a>
+                                            <a class="submenulink" href="/search?search_query=hardcore&amp;search_type=videos">hardcore</a>
+                                            <a class="submenulink" href="/search?search_query=fingers&amp;search_type=videos">fingers</a>
+                                            <a class="submenulink" href="/search?search_query=asian&amp;search_type=videos">asian</a>
+                                            <a class="submenulink" href="/search?search_query=teen&amp;search_type=videos">teen</a>
+                                            <a class="submenulink" href="/search?search_query=holes&amp;search_type=videos">holes</a>
+                                            <a class="submenulink" href="/search?search_query=Babe&amp;search_type=videos">Babe</a>
+                                            <a class="submenulink" href="/search?search_query=dildo&amp;search_type=videos">dildo</a>
                                         </div>
                 </div>
                 <div class="clear"></div>
@@ -181,7 +171,7 @@
         <a href="/static/advertise" rel="nofollow">Advertise</a> |
 				<a href="/feedback" rel="nofollow">Support / Feedback</a>
 				<br>Copyright © 2008-2009 <a href="http://www.nsfwftw.com">NSFWFTW</a>. All Rights Reserved.<br>
-	<span class="smallest grey">Rendered in 0.0368, using 3,14 MB memory!</span>
+	<span class="smallest grey">Rendered in 0.0395, using 3,13 MB memory!</span>
     </div>   
 <center>
 <table>
