--- a/b/br/bro/brookshires.com.html
+++ b/b/br/bro/brookshires.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the brookshires.com privacy policy that was archived on 2010-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100620005203id_/http%3A//www.brookshires.com/brookshire_cnt/PrivacyPolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brookshires.com privacy policy that was archived on 2010-08-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100829214910id_/http%3A//www.brookshires.com/brookshire_cnt/PrivacyPolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><!-- InstanceBegin template="/Templates/TemplateSubpage.dwt" codeOutsideHTMLIsLocked="false" --><head>
 	<!-- InstanceBeginEditable name="doctitle" -->
@@ -80,7 +80,7 @@
 									<a class="menu border" id="mmenu2" href="http://www.brookshires.com/brookshire_cnt/Shopping.html" onmouseout="mclosetime();" onmouseover="mopen(2);">Shopping</a>
 									<div class="submenu" id="menu2" onmouseover="mcancelclosetime();" onmouseout="mclosetime();">
 										<a href="http://www.brookshires.com/brookshire_cnt/Circular.html">Circulars</a>
-                                        <a href="http://www.brookshires.com/brookshire_cnt/coupons.html">Coupons</a>
+                                        <a href="http://print.coupons.com/couponweb/index.aspx?pid=15404&amp;nid=10&amp;zid=gf13&amp;returnpage=eoffers">Coupons</a>
 										<a href="http://brookshires.mywebgrocer.com/ShoppingList.aspx">Shopping List</a>
 										<a href="http://brookshires.elsstore.com/">Special Order</a>
 										<a href="http://www.brookshires.com/brookshire_cnt/GiftCards.html">Gift Cards</a>
@@ -173,7 +173,7 @@
 								<p class="text"><u>What This Privacy Policy Covers</u></p>
 								<p class="text">This Privacy Policy describes how Brookshire treats personal   information that Brookshire collects and receives, including information related   to your past use of Brookshire products and services. Personal information is   information about you that is personally identifiable like your name, address,   email address, telephone number, credit card and checking account information,   and any information that can be linked to you that is not otherwise publicly   available. </p>
 								<p class="text">&nbsp;</p>
-								<p class="text">This policy does not apply to the practices of companies that   Brookshire does not own or control or to people that Brookshire does not employ   or manage. In addition, certain Brookshire associated companies such as   MyWebGrocer.com have their own Privacy Policies which can be viewed by going to <a href="http://www.mywebgrocer.com/Privacy-Policy.aspx">http://www.mywebgrocer.com/Privacy-Policy.aspx. </a>Brookshire is   not responsible for the content or the privacy and security policies or   practices of any such companies or people.</p>
+								<p class="text">This policy does not apply to the practices of companies that   Brookshire does not own or control or to people that Brookshire does not employ   or manage. In addition, certain Brookshire associated companies such as   MyWebGrocer.com have their own Privacy Policies which can be viewed by going to <a href="http://www.mywebgrocer.com/privacypolicy.aspx">http://www.mywebgrocer.com/privacypolicy.aspx</a>. Brookshire is   not responsible for the content or the privacy and security policies or   practices of any such companies or people.</p>
 								<p class="text">&nbsp;</p>
 								<p class="text"><u>Information Sharing and Disclosure</u></p>
 								<p class="text">Brookshire Grocery Company does not rent, sell, or share personal   information about you with other people or nonaffiliated companies except to   provide products or services you've requested, when we have your permission, or   when required to do so by law or legal process.</p>
