--- a/b/br/bru/brusheezy.com.html
+++ b/b/br/bru/brusheezy.com.html
@@ -1,23 +1,23 @@
-<!--The following is the downloaded HTML source of the brusheezy.com privacy policy that was archived on 2010-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100628190035id_/http%3A//www.brusheezy.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brusheezy.com privacy policy that was archived on 2010-08-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100830091219id_/http%3A//www.brusheezy.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <meta content="IE=EmulateIE7" http-equiv="X-UA-Compatible">
 <link href="/images/brusheezy/favicon.ico" rel="shortcut icon">
 <title>Free Photoshop Brushes at Brusheezy!</title>
-<link href="http://brusheezy.cdn.eezyinc.com/stylesheets/brusheezy.css?1277584376" media="screen" rel="stylesheet" type="text/css">
-<link href="http://brusheezy.cdn.eezyinc.com/stylesheets/colorbox.css?1277584376" media="screen" rel="stylesheet" type="text/css">
-<link href="http://brusheezy.cdn.eezyinc.com/stylesheets/brusheezysupport.css?1277584376" media="screen" rel="stylesheet" type="text/css">
-<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jquery.js?1277584376" type="text/javascript"></script>
-<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jquery-ui.js?1277584376" type="text/javascript"></script>
-<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jrails.js?1277584376" type="text/javascript"></script>
-<script src="http://brusheezy.cdn.eezyinc.com/javascripts/application.js?1277584376" type="text/javascript"></script>
-<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jquery.colorbox.js?1277584376" type="text/javascript"></script>
-<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jquery.popupwindow.js?1277584376" type="text/javascript"></script>
-<script src="http://brusheezy.cdn.eezyinc.com/javascripts/ie-hover-pack.js?1277584376" type="text/javascript"></script>
+<link href="http://brusheezy.cdn.eezyinc.com/stylesheets/brusheezy.css?1281626473" media="screen" rel="stylesheet" type="text/css">
+<link href="http://brusheezy.cdn.eezyinc.com/stylesheets/colorbox.css?1281626473" media="screen" rel="stylesheet" type="text/css">
+<link href="http://brusheezy.cdn.eezyinc.com/stylesheets/brusheezysupport.css?1281626473" media="screen" rel="stylesheet" type="text/css">
+<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jquery.js?1281626473" type="text/javascript"></script>
+<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jquery-ui.js?1281626473" type="text/javascript"></script>
+<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jrails.js?1281626473" type="text/javascript"></script>
+<script src="http://brusheezy.cdn.eezyinc.com/javascripts/application.js?1281626473" type="text/javascript"></script>
+<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jquery.colorbox.js?1281626473" type="text/javascript"></script>
+<script src="http://brusheezy.cdn.eezyinc.com/javascripts/jquery.popupwindow.js?1281626473" type="text/javascript"></script>
+<script src="http://brusheezy.cdn.eezyinc.com/javascripts/ie-hover-pack.js?1281626473" type="text/javascript"></script>
 <!--[if lt IE 7]>
-<link href="http://brusheezy.cdn.eezyinc.com/stylesheets/ie.css?1277584376" media="screen" rel="stylesheet" type="text/css" />
+<link href="http://brusheezy.cdn.eezyinc.com/stylesheets/ie.css?1281626473" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
 
 <script type="text/javascript" src="http://partner.googleadservices.com/gampad/google_service.js">
@@ -28,6 +28,7 @@
 </script>
 <script type="text/javascript">
   GA_googleAddSlot("ca-pub-8467368486217144", "Brusheezy_Bottom_300x250_ROS");
+  GA_googleAddSlot("ca-pub-8467368486217144", "Brusheezy_Top_Med_Rectangle");
 </script>
 <script type="text/javascript">
   GA_googleFetchAds();
@@ -103,9 +104,10 @@
 </a></li>
 </ul>
 </li>
+<li><a href="/premium"><span>Premium</span><em>Premium</em></a></li>
 
 </ul>
-<form action="/search" class="search-form" method="post"><div style="margin:0;padding:0;display:inline"><input name="authenticity_token" type="hidden" value="K93loI5bv8VXJxY1HKlHuX8HVKIHGJs1LrYxflbfdoI="></div>
+<form action="/search" class="search-form" method="post"><div style="margin:0;padding:0;display:inline"><input name="authenticity_token" type="hidden" value="Q+s6gSQHleNiqCGL6hyEpkv12pyUq590ObZdOV1z078="></div>
 <div class="search_box_wrap">
 <input class="default" id="search" name="search" onclick="clearIf(this, 'Search Brusheezy');" type="text" value="Search Brusheezy">
 </div>
@@ -220,9 +222,9 @@ In the event case of any conflict between the terms of this policy and the terms
 <h3>Friends of Brusheezy</h3>
 <div class="foot-block">
 <ul class="adverts-list">
-<li><a href="http://www.techi.com/" target="_blank"><img alt="125x125" src="http://brusheezy.cdn.eezyinc.com/system/adverts/images/000/000/022/original/125x125.jpg?1273014485"></a></li>
-<li><a href="http://ads.xeezy.com/DesignMag" target="_blank"><img alt="Designmag" src="http://brusheezy.cdn.eezyinc.com/system/adverts/images/000/000/028/original/designmag.gif?1275504542"></a><h2><a href="http://ads.xeezy.com/DesignMag" target="_blank"></a></h2><p></p><div class="end"></div></li>
+<li><a href="http://www.photoshopsupport.com" target="_blank"><img alt="Ps-125x125" src="http://brusheezy.cdn.eezyinc.com/system/adverts/images/000/000/029/original/ps-125x125.gif?1278965524"></a><h2><a href="http://www.photoshopsupport.com" target="_blank"></a></h2><p></p><div class="end"></div></li>
 <li><a href="http://www.thevectorlab.com/idevaffiliate/idevaffiliate.php?id=101_0_1_5" target="_blank"><img alt="Vector_lab_02-125x125" src="http://brusheezy.cdn.eezyinc.com/system/adverts/images/000/000/025/original/Vector_Lab_02-125x125.jpg?1274899876"></a></li>
+<li><a href="http://ads.xeezy.com/DesignMag" target="_blank"><img alt="Designmag" src="http://brusheezy.cdn.eezyinc.com/system/adverts/images/000/000/028/original/designmag.gif?1275504542"></a><h2><a href="http://ads.xeezy.com/DesignMag" target="_blank"></a></h2><p></p><div class="end"></div></li>
 <li><a href="http://www.pjatr.com/t/Rj9EQkNLST9DREtEP0VESUNL?sid=brusheezy-footer" target="_blank"><img alt="20197" src="http://brusheezy.cdn.eezyinc.com/system/adverts/images/000/000/014/original/20197.gif?1257104760"></a></li>
 </ul>
 </div>
